PL_P5/y.output
La regla es inútil debido a los conflictos

   29 $@7: %empty

   32 $@9: %empty


Estado 4 conflictos: 4 reducción/reducción
Estado 85 conflictos: 2 reducción/reducción


Gramática

    0 $accept: programa $end

    1 programa: MAIN bloque PYC
    2         | MAIN error
    3         | MAIN bloque error

    4 $@1: %empty

    5 bloque: LLAVEIZQ $@1 declar_de_variables_locales declar_de_subprogs sentencias LLAVEDCH

    6 $@2: %empty

    7 bloque: LLAVEIZQ $@2 declar_de_variables_locales declar_de_subprogs LLAVEDCH

    8 $@3: %empty

    9 bloque: LLAVEIZQ $@3 declar_de_variables_locales declar_de_subprogs error

   10 declar_de_variables_locales: INIVARIABLES variables_locales FINVARIABLES
   11                            | %empty
   12                            | INIVARIABLES error
   13                            | INIVARIABLES variables_locales error

   14 variables_locales: variables_locales cuerpo_declar_variables PYC
   15                  | cuerpo_declar_variables PYC
   16                  | cuerpo_declar_variables error

   17 cuerpo_declar_variables: tipo_basico lista_identificadores
   18                        | tipo_basico error

   19 lista_identificadores: lista_identificadores COMA IDENTIFICADOR
   20                      | IDENTIFICADOR

   21 declar_de_subprogs: declar_de_subprogs declarar_funcion
   22                   | %empty

   23 $@4: %empty

   24 $@5: %empty

   25 declarar_funcion: tipo_basico IDENTIFICADOR $@4 parametros $@5 bloque PYC
   26                 | tipo_basico error

   27 $@6: %empty

   28 declarar_funcion: tipo_basico IDENTIFICADOR $@6 error

   29 $@7: %empty

   30 $@8: %empty

   31 declarar_funcion: tipo_basico IDENTIFICADOR $@7 parametros $@8 error

   32 $@9: %empty

   33 $@10: %empty

   34 declarar_funcion: tipo_basico IDENTIFICADOR $@9 parametros $@10 bloque error

   35 parametros: PARIZQ PARDCH
   36           | PARIZQ lista_parametros PARDCH
   37           | PARIZQ lista_parametros error

   38 lista_parametros: tipo_basico IDENTIFICADOR
   39                 | lista_parametros COMA tipo_basico IDENTIFICADOR
   40                 | tipo_basico error

   41 tipo_basico: TYPE

   42 sentencias: sentencias sentencia
   43           | sentencia

   44 sentencia: sentencia_asignacion
   45          | sentencia_if
   46          | sentencia_while
   47          | sentencia_entrada
   48          | sentencia_salida
   49          | sentencia_return
   50          | sentencia_for_pascal
   51          | sentencia_lista
   52          | PYC

   53 sentencia_asignacion: IDENTIFICADOR IGUAL expresion PYC
   54                     | IDENTIFICADOR IGUAL error
   55                     | IDENTIFICADOR IGUAL expresion error

   56 sentencia_if: IF PARIZQ expresion PARDCH THEN bloque ELSE bloque
   57             | IF PARIZQ expresion PARDCH THEN bloque
   58             | IF error
   59             | IF PARIZQ error
   60             | IF PARIZQ expresion error
   61             | IF PARIZQ expresion PARDCH error
   62             | IF PARIZQ expresion PARDCH THEN error
   63             | IF PARIZQ expresion PARDCH THEN bloque ELSE error

   64 sentencia_while: WHILE PARIZQ expresion PARDCH bloque
   65                | WHILE error
   66                | WHILE PARIZQ error
   67                | WHILE PARIZQ expresion error
   68                | WHILE PARIZQ expresion PARDCH error

   69 sentencia_entrada: READ PARIZQ lista_entrada PARDCH PYC
   70                  | READ error
   71                  | READ PARIZQ error
   72                  | READ PARIZQ lista_entrada error
   73                  | READ PARIZQ lista_entrada PARDCH error

   74 sentencia_salida: WRITE PARIZQ lista_salida PARDCH PYC
   75                 | WRITE error
   76                 | WRITE PARIZQ error
   77                 | WRITE PARIZQ lista_salida error
   78                 | WRITE PARIZQ lista_salida PARDCH error

   79 sentencia_return: RETURN expresion PYC
   80                 | RETURN error
   81                 | RETURN expresion error

   82 sentencia_for_pascal: FOR IDENTIFICADOR IGUAL expresion TO expresion DO bloque
   83                     | FOR error
   84                     | FOR sentencia_asignacion error
   85                     | FOR sentencia_asignacion TO error
   86                     | FOR sentencia_asignacion TO expresion error
   87                     | FOR sentencia_asignacion TO expresion DO error

   88 sentencia_lista: IDENTIFICADOR MOVLISTA PYC
   89                | PRINCIPIOLISTA IDENTIFICADOR PYC

   90 lista_entrada: lista_entrada COMA IDENTIFICADOR
   91              | IDENTIFICADOR

   92 lista_salida: lista_salida COMA expresion
   93             | expresion

   94 expresion: PARIZQ expresion PARDCH
   95          | OPUNI expresion
   96          | expresion OPBIN expresion
   97          | expresion TER1 expresion ARROBA expresion
   98          | IDENTIFICADOR
   99          | llamar_funcion
  100          | agregado
  101          | LITERAL
  102          | PARIZQ error
  103          | OPUNI error
  104          | expresion OPBIN error
  105          | expresion TER1 error
  106          | expresion TER1 expresion error

  107 $@11: %empty

  108 llamar_funcion: IDENTIFICADOR $@11 argumentos

  109 argumentos: PARIZQ lista_argumentos PARDCH
  110           | PARIZQ lista_argumentos error

  111 lista_argumentos: expresion
  112                 | lista_argumentos COMA expresion
  113                 | %empty

  114 agregado: CORIZQ lista_expresiones CORDCH
  115         | CORIZQ error
  116         | CORIZQ lista_expresiones error

  117 lista_expresiones: lista_expresiones COMA expresion
  118                  | expresion

  119 OPUNI: NOT
  120      | SOSTENIDO
  121      | INTERROGACION
  122      | MENOS

  123 OPBIN: IGUALDAD
  124      | MENOS
  125      | LOGICOS
  126      | MAS
  127      | MULTIPLICATIVO
  128      | COMPARACION
  129      | ARROBA
  130      | MENOSMENOS
  131      | PORCENTAJE
  132      | DOBLEPOR


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256) 2 3 9 12 13 16 18 26 28 31 34 37 40 54 55 58 59 60 61 62 63 65 66 67 68 70 71 72 73 75 76 77 78 80 81 83 84 85 86 87 102 103 104 105 106 110 115 116
    IGUAL (258) 53 54 55 82
    LOGICOS (259) 125
    IGUALDAD (260) 123
    COMPARACION (261) 128
    MAS (262) 126
    MENOSMENOS (263) 130
    MULTIPLICATIVO (264) 127
    NOT (265) 119
    SOSTENIDO (266) 120
    INTERROGACION (267) 121
    TER1 (268) 97 105 106
    ARROBA (269) 97 129
    PORCENTAJE (270) 131
    DOBLEPOR (271) 132
    MENOS (272) 122 124
    LITERAL (273) 101
    IDENTIFICADOR (274) 19 20 25 28 31 34 38 39 53 54 55 82 88 89 90 91 98 108
    LLAVEIZQ (275) 5 7 9
    LLAVEDCH (276) 5 7
    CORIZQ (277) 114 115 116
    CORDCH (278) 114
    PARIZQ (279) 35 36 37 56 57 59 60 61 62 63 64 66 67 68 69 71 72 73 74 76 77 78 94 102 109 110
    PARDCH (280) 35 36 56 57 61 62 63 64 68 69 73 74 78 94 109
    MAIN (281) 1 2 3
    TYPE (282) 41
    IF (283) 56 57 58 59 60 61 62 63
    THEN (284) 56 57 62 63
    ELSE (285) 56 63
    FOR (286) 82 83 84 85 86 87
    TO (287) 82 85 86 87
    DO (288) 82 87
    WRITE (289) 74 75 76 77 78
    READ (290) 69 70 71 72 73
    COMA (291) 19 39 90 92 112 117
    PYC (292) 1 14 15 25 52 53 69 74 79 88 89
    RETURN (293) 79 80 81
    WHILE (294) 64 65 66 67 68
    PRINCIPIOLISTA (295) 89
    MOVLISTA (296) 88
    INIVARIABLES (297) 10 12 13
    FINVARIABLES (298) 10


No terminales con las reglas donde aparecen

    $accept (44)
        on left: 0
    programa (45)
        on left: 1 2 3
        on right: 0
    bloque (46)
        on left: 5 7 9
        on right: 1 3 25 34 56 57 63 64 82
    $@1 (47)
        on left: 4
        on right: 5
    $@2 (48)
        on left: 6
        on right: 7
    $@3 (49)
        on left: 8
        on right: 9
    declar_de_variables_locales (50)
        on left: 10 11 12 13
        on right: 5 7 9
    variables_locales (51)
        on left: 14 15 16
        on right: 10 13 14
    cuerpo_declar_variables (52)
        on left: 17 18
        on right: 14 15 16
    lista_identificadores (53)
        on left: 19 20
        on right: 17 19
    declar_de_subprogs (54)
        on left: 21 22
        on right: 5 7 9 21
    declarar_funcion (55)
        on left: 25 26 28 31 34
        on right: 21
    $@4 (56)
        on left: 23
        on right: 25
    $@5 (57)
        on left: 24
        on right: 25
    $@6 (58)
        on left: 27
        on right: 28
    $@7 (59)
        on left: 29
        on right: 31
    $@8 (60)
        on left: 30
        on right: 31
    $@9 (61)
        on left: 32
        on right: 34
    $@10 (62)
        on left: 33
        on right: 34
    parametros (63)
        on left: 35 36 37
        on right: 25 31 34
    lista_parametros (64)
        on left: 38 39 40
        on right: 36 37 39
    tipo_basico (65)
        on left: 41
        on right: 17 18 25 26 28 31 34 38 39 40
    sentencias (66)
        on left: 42 43
        on right: 5 42
    sentencia (67)
        on left: 44 45 46 47 48 49 50 51 52
        on right: 42 43
    sentencia_asignacion (68)
        on left: 53 54 55
        on right: 44 84 85 86 87
    sentencia_if (69)
        on left: 56 57 58 59 60 61 62 63
        on right: 45
    sentencia_while (70)
        on left: 64 65 66 67 68
        on right: 46
    sentencia_entrada (71)
        on left: 69 70 71 72 73
        on right: 47
    sentencia_salida (72)
        on left: 74 75 76 77 78
        on right: 48
    sentencia_return (73)
        on left: 79 80 81
        on right: 49
    sentencia_for_pascal (74)
        on left: 82 83 84 85 86 87
        on right: 50
    sentencia_lista (75)
        on left: 88 89
        on right: 51
    lista_entrada (76)
        on left: 90 91
        on right: 69 72 73 90
    lista_salida (77)
        on left: 92 93
        on right: 74 77 78 92
    expresion (78)
        on left: 94 95 96 97 98 99 100 101 102 103 104 105 106
        on right: 53 55 56 57 60 61 62 63 64 67 68 79 81 82 86 87 92 93 94 95 96 97 104 105 106 111 112 117 118
    llamar_funcion (79)
        on left: 108
        on right: 99
    $@11 (80)
        on left: 107
        on right: 108
    argumentos (81)
        on left: 109 110
        on right: 108
    lista_argumentos (82)
        on left: 111 112 113
        on right: 109 110 112
    agregado (83)
        on left: 114 115 116
        on right: 100
    lista_expresiones (84)
        on left: 117 118
        on right: 114 116 117
    OPUNI (85)
        on left: 119 120 121 122
        on right: 95 103
    OPBIN (86)
        on left: 123 124 125 126 127 128 129 130 131 132
        on right: 96 104


Estado 0

    0 $accept: . programa $end

    MAIN  desplazar e ir al estado 1

    programa  ir al estado 2


Estado 1

    1 programa: MAIN . bloque PYC
    2         | MAIN . error
    3         | MAIN . bloque error

    error     desplazar e ir al estado 3
    LLAVEIZQ  desplazar e ir al estado 4

    bloque  ir al estado 5


Estado 2

    0 $accept: programa . $end

    $end  desplazar e ir al estado 6


Estado 3

    2 programa: MAIN error .

    $default  reduce usando la regla 2 (programa)


Estado 4

    5 bloque: LLAVEIZQ . $@1 declar_de_variables_locales declar_de_subprogs sentencias LLAVEDCH
    7       | LLAVEIZQ . $@2 declar_de_variables_locales declar_de_subprogs LLAVEDCH
    9       | LLAVEIZQ . $@3 declar_de_variables_locales declar_de_subprogs error

    error         reduce usando la regla 8 ($@3)
    LLAVEDCH      reduce usando la regla 6 ($@2)
    TYPE          reduce usando la regla 4 ($@1)
    TYPE          [reduce usando la regla 6 ($@2)]
    TYPE          [reduce usando la regla 8 ($@3)]
    INIVARIABLES  reduce usando la regla 4 ($@1)
    INIVARIABLES  [reduce usando la regla 6 ($@2)]
    INIVARIABLES  [reduce usando la regla 8 ($@3)]
    $default      reduce usando la regla 4 ($@1)

    $@1  ir al estado 7
    $@2  ir al estado 8
    $@3  ir al estado 9


Estado 5

    1 programa: MAIN bloque . PYC
    3         | MAIN bloque . error

    error  desplazar e ir al estado 10
    PYC    desplazar e ir al estado 11


Estado 6

    0 $accept: programa $end .

    $default  aceptar


Estado 7

    5 bloque: LLAVEIZQ $@1 . declar_de_variables_locales declar_de_subprogs sentencias LLAVEDCH

    INIVARIABLES  desplazar e ir al estado 12

    $default  reduce usando la regla 11 (declar_de_variables_locales)

    declar_de_variables_locales  ir al estado 13


Estado 8

    7 bloque: LLAVEIZQ $@2 . declar_de_variables_locales declar_de_subprogs LLAVEDCH

    INIVARIABLES  desplazar e ir al estado 12

    $default  reduce usando la regla 11 (declar_de_variables_locales)

    declar_de_variables_locales  ir al estado 14


Estado 9

    9 bloque: LLAVEIZQ $@3 . declar_de_variables_locales declar_de_subprogs error

    INIVARIABLES  desplazar e ir al estado 12

    $default  reduce usando la regla 11 (declar_de_variables_locales)

    declar_de_variables_locales  ir al estado 15


Estado 10

    3 programa: MAIN bloque error .

    $default  reduce usando la regla 3 (programa)


Estado 11

    1 programa: MAIN bloque PYC .

    $default  reduce usando la regla 1 (programa)


Estado 12

   10 declar_de_variables_locales: INIVARIABLES . variables_locales FINVARIABLES
   12                            | INIVARIABLES . error
   13                            | INIVARIABLES . variables_locales error

    error  desplazar e ir al estado 16
    TYPE   desplazar e ir al estado 17

    variables_locales        ir al estado 18
    cuerpo_declar_variables  ir al estado 19
    tipo_basico              ir al estado 20


Estado 13

    5 bloque: LLAVEIZQ $@1 declar_de_variables_locales . declar_de_subprogs sentencias LLAVEDCH

    $default  reduce usando la regla 22 (declar_de_subprogs)

    declar_de_subprogs  ir al estado 21


Estado 14

    7 bloque: LLAVEIZQ $@2 declar_de_variables_locales . declar_de_subprogs LLAVEDCH

    $default  reduce usando la regla 22 (declar_de_subprogs)

    declar_de_subprogs  ir al estado 22


Estado 15

    9 bloque: LLAVEIZQ $@3 declar_de_variables_locales . declar_de_subprogs error

    $default  reduce usando la regla 22 (declar_de_subprogs)

    declar_de_subprogs  ir al estado 23


Estado 16

   12 declar_de_variables_locales: INIVARIABLES error .

    $default  reduce usando la regla 12 (declar_de_variables_locales)


Estado 17

   41 tipo_basico: TYPE .

    $default  reduce usando la regla 41 (tipo_basico)


Estado 18

   10 declar_de_variables_locales: INIVARIABLES variables_locales . FINVARIABLES
   13                            | INIVARIABLES variables_locales . error
   14 variables_locales: variables_locales . cuerpo_declar_variables PYC

    error         desplazar e ir al estado 24
    TYPE          desplazar e ir al estado 17
    FINVARIABLES  desplazar e ir al estado 25

    cuerpo_declar_variables  ir al estado 26
    tipo_basico              ir al estado 20


Estado 19

   15 variables_locales: cuerpo_declar_variables . PYC
   16                  | cuerpo_declar_variables . error

    error  desplazar e ir al estado 27
    PYC    desplazar e ir al estado 28


Estado 20

   17 cuerpo_declar_variables: tipo_basico . lista_identificadores
   18                        | tipo_basico . error

    error          desplazar e ir al estado 29
    IDENTIFICADOR  desplazar e ir al estado 30

    lista_identificadores  ir al estado 31


Estado 21

    5 bloque: LLAVEIZQ $@1 declar_de_variables_locales declar_de_subprogs . sentencias LLAVEDCH
   21 declar_de_subprogs: declar_de_subprogs . declarar_funcion

    IDENTIFICADOR   desplazar e ir al estado 32
    TYPE            desplazar e ir al estado 17
    IF              desplazar e ir al estado 33
    FOR             desplazar e ir al estado 34
    WRITE           desplazar e ir al estado 35
    READ            desplazar e ir al estado 36
    PYC             desplazar e ir al estado 37
    RETURN          desplazar e ir al estado 38
    WHILE           desplazar e ir al estado 39
    PRINCIPIOLISTA  desplazar e ir al estado 40

    declarar_funcion      ir al estado 41
    tipo_basico           ir al estado 42
    sentencias            ir al estado 43
    sentencia             ir al estado 44
    sentencia_asignacion  ir al estado 45
    sentencia_if          ir al estado 46
    sentencia_while       ir al estado 47
    sentencia_entrada     ir al estado 48
    sentencia_salida      ir al estado 49
    sentencia_return      ir al estado 50
    sentencia_for_pascal  ir al estado 51
    sentencia_lista       ir al estado 52


Estado 22

    7 bloque: LLAVEIZQ $@2 declar_de_variables_locales declar_de_subprogs . LLAVEDCH
   21 declar_de_subprogs: declar_de_subprogs . declarar_funcion

    LLAVEDCH  desplazar e ir al estado 53
    TYPE      desplazar e ir al estado 17

    declarar_funcion  ir al estado 41
    tipo_basico       ir al estado 42


Estado 23

    9 bloque: LLAVEIZQ $@3 declar_de_variables_locales declar_de_subprogs . error
   21 declar_de_subprogs: declar_de_subprogs . declarar_funcion

    error  desplazar e ir al estado 54
    TYPE   desplazar e ir al estado 17

    declarar_funcion  ir al estado 41
    tipo_basico       ir al estado 42


Estado 24

   13 declar_de_variables_locales: INIVARIABLES variables_locales error .

    $default  reduce usando la regla 13 (declar_de_variables_locales)


Estado 25

   10 declar_de_variables_locales: INIVARIABLES variables_locales FINVARIABLES .

    $default  reduce usando la regla 10 (declar_de_variables_locales)


Estado 26

   14 variables_locales: variables_locales cuerpo_declar_variables . PYC

    PYC  desplazar e ir al estado 55


Estado 27

   16 variables_locales: cuerpo_declar_variables error .

    $default  reduce usando la regla 16 (variables_locales)


Estado 28

   15 variables_locales: cuerpo_declar_variables PYC .

    $default  reduce usando la regla 15 (variables_locales)


Estado 29

   18 cuerpo_declar_variables: tipo_basico error .

    $default  reduce usando la regla 18 (cuerpo_declar_variables)


Estado 30

   20 lista_identificadores: IDENTIFICADOR .

    $default  reduce usando la regla 20 (lista_identificadores)


Estado 31

   17 cuerpo_declar_variables: tipo_basico lista_identificadores .
   19 lista_identificadores: lista_identificadores . COMA IDENTIFICADOR

    COMA  desplazar e ir al estado 56

    $default  reduce usando la regla 17 (cuerpo_declar_variables)


Estado 32

   53 sentencia_asignacion: IDENTIFICADOR . IGUAL expresion PYC
   54                     | IDENTIFICADOR . IGUAL error
   55                     | IDENTIFICADOR . IGUAL expresion error
   88 sentencia_lista: IDENTIFICADOR . MOVLISTA PYC

    IGUAL     desplazar e ir al estado 57
    MOVLISTA  desplazar e ir al estado 58


Estado 33

   56 sentencia_if: IF . PARIZQ expresion PARDCH THEN bloque ELSE bloque
   57             | IF . PARIZQ expresion PARDCH THEN bloque
   58             | IF . error
   59             | IF . PARIZQ error
   60             | IF . PARIZQ expresion error
   61             | IF . PARIZQ expresion PARDCH error
   62             | IF . PARIZQ expresion PARDCH THEN error
   63             | IF . PARIZQ expresion PARDCH THEN bloque ELSE error

    error   desplazar e ir al estado 59
    PARIZQ  desplazar e ir al estado 60


Estado 34

   82 sentencia_for_pascal: FOR . IDENTIFICADOR IGUAL expresion TO expresion DO bloque
   83                     | FOR . error
   84                     | FOR . sentencia_asignacion error
   85                     | FOR . sentencia_asignacion TO error
   86                     | FOR . sentencia_asignacion TO expresion error
   87                     | FOR . sentencia_asignacion TO expresion DO error

    error          desplazar e ir al estado 61
    IDENTIFICADOR  desplazar e ir al estado 62

    sentencia_asignacion  ir al estado 63


Estado 35

   74 sentencia_salida: WRITE . PARIZQ lista_salida PARDCH PYC
   75                 | WRITE . error
   76                 | WRITE . PARIZQ error
   77                 | WRITE . PARIZQ lista_salida error
   78                 | WRITE . PARIZQ lista_salida PARDCH error

    error   desplazar e ir al estado 64
    PARIZQ  desplazar e ir al estado 65


Estado 36

   69 sentencia_entrada: READ . PARIZQ lista_entrada PARDCH PYC
   70                  | READ . error
   71                  | READ . PARIZQ error
   72                  | READ . PARIZQ lista_entrada error
   73                  | READ . PARIZQ lista_entrada PARDCH error

    error   desplazar e ir al estado 66
    PARIZQ  desplazar e ir al estado 67


Estado 37

   52 sentencia: PYC .

    $default  reduce usando la regla 52 (sentencia)


Estado 38

   79 sentencia_return: RETURN . expresion PYC
   80                 | RETURN . error
   81                 | RETURN . expresion error

    error          desplazar e ir al estado 68
    NOT            desplazar e ir al estado 69
    SOSTENIDO      desplazar e ir al estado 70
    INTERROGACION  desplazar e ir al estado 71
    MENOS          desplazar e ir al estado 72
    LITERAL        desplazar e ir al estado 73
    IDENTIFICADOR  desplazar e ir al estado 74
    CORIZQ         desplazar e ir al estado 75
    PARIZQ         desplazar e ir al estado 76

    expresion       ir al estado 77
    llamar_funcion  ir al estado 78
    agregado        ir al estado 79
    OPUNI           ir al estado 80


Estado 39

   64 sentencia_while: WHILE . PARIZQ expresion PARDCH bloque
   65                | WHILE . error
   66                | WHILE . PARIZQ error
   67                | WHILE . PARIZQ expresion error
   68                | WHILE . PARIZQ expresion PARDCH error

    error   desplazar e ir al estado 81
    PARIZQ  desplazar e ir al estado 82


Estado 40

   89 sentencia_lista: PRINCIPIOLISTA . IDENTIFICADOR PYC

    IDENTIFICADOR  desplazar e ir al estado 83


Estado 41

   21 declar_de_subprogs: declar_de_subprogs declarar_funcion .

    $default  reduce usando la regla 21 (declar_de_subprogs)


Estado 42

   25 declarar_funcion: tipo_basico . IDENTIFICADOR $@4 parametros $@5 bloque PYC
   26                 | tipo_basico . error
   28                 | tipo_basico . IDENTIFICADOR $@6 error
   31                 | tipo_basico . IDENTIFICADOR $@7 parametros $@8 error
   34                 | tipo_basico . IDENTIFICADOR $@9 parametros $@10 bloque error

    error          desplazar e ir al estado 84
    IDENTIFICADOR  desplazar e ir al estado 85


Estado 43

    5 bloque: LLAVEIZQ $@1 declar_de_variables_locales declar_de_subprogs sentencias . LLAVEDCH
   42 sentencias: sentencias . sentencia

    IDENTIFICADOR   desplazar e ir al estado 32
    LLAVEDCH        desplazar e ir al estado 86
    IF              desplazar e ir al estado 33
    FOR             desplazar e ir al estado 34
    WRITE           desplazar e ir al estado 35
    READ            desplazar e ir al estado 36
    PYC             desplazar e ir al estado 37
    RETURN          desplazar e ir al estado 38
    WHILE           desplazar e ir al estado 39
    PRINCIPIOLISTA  desplazar e ir al estado 40

    sentencia             ir al estado 87
    sentencia_asignacion  ir al estado 45
    sentencia_if          ir al estado 46
    sentencia_while       ir al estado 47
    sentencia_entrada     ir al estado 48
    sentencia_salida      ir al estado 49
    sentencia_return      ir al estado 50
    sentencia_for_pascal  ir al estado 51
    sentencia_lista       ir al estado 52


Estado 44

   43 sentencias: sentencia .

    $default  reduce usando la regla 43 (sentencias)


Estado 45

   44 sentencia: sentencia_asignacion .

    $default  reduce usando la regla 44 (sentencia)


Estado 46

   45 sentencia: sentencia_if .

    $default  reduce usando la regla 45 (sentencia)


Estado 47

   46 sentencia: sentencia_while .

    $default  reduce usando la regla 46 (sentencia)


Estado 48

   47 sentencia: sentencia_entrada .

    $default  reduce usando la regla 47 (sentencia)


Estado 49

   48 sentencia: sentencia_salida .

    $default  reduce usando la regla 48 (sentencia)


Estado 50

   49 sentencia: sentencia_return .

    $default  reduce usando la regla 49 (sentencia)


Estado 51

   50 sentencia: sentencia_for_pascal .

    $default  reduce usando la regla 50 (sentencia)


Estado 52

   51 sentencia: sentencia_lista .

    $default  reduce usando la regla 51 (sentencia)


Estado 53

    7 bloque: LLAVEIZQ $@2 declar_de_variables_locales declar_de_subprogs LLAVEDCH .

    $default  reduce usando la regla 7 (bloque)


Estado 54

    9 bloque: LLAVEIZQ $@3 declar_de_variables_locales declar_de_subprogs error .

    $default  reduce usando la regla 9 (bloque)


Estado 55

   14 variables_locales: variables_locales cuerpo_declar_variables PYC .

    $default  reduce usando la regla 14 (variables_locales)


Estado 56

   19 lista_identificadores: lista_identificadores COMA . IDENTIFICADOR

    IDENTIFICADOR  desplazar e ir al estado 88


Estado 57

   53 sentencia_asignacion: IDENTIFICADOR IGUAL . expresion PYC
   54                     | IDENTIFICADOR IGUAL . error
   55                     | IDENTIFICADOR IGUAL . expresion error

    error          desplazar e ir al estado 89
    NOT            desplazar e ir al estado 69
    SOSTENIDO      desplazar e ir al estado 70
    INTERROGACION  desplazar e ir al estado 71
    MENOS          desplazar e ir al estado 72
    LITERAL        desplazar e ir al estado 73
    IDENTIFICADOR  desplazar e ir al estado 74
    CORIZQ         desplazar e ir al estado 75
    PARIZQ         desplazar e ir al estado 76

    expresion       ir al estado 90
    llamar_funcion  ir al estado 78
    agregado        ir al estado 79
    OPUNI           ir al estado 80


Estado 58

   88 sentencia_lista: IDENTIFICADOR MOVLISTA . PYC

    PYC  desplazar e ir al estado 91


Estado 59

   58 sentencia_if: IF error .

    $default  reduce usando la regla 58 (sentencia_if)


Estado 60

   56 sentencia_if: IF PARIZQ . expresion PARDCH THEN bloque ELSE bloque
   57             | IF PARIZQ . expresion PARDCH THEN bloque
   59             | IF PARIZQ . error
   60             | IF PARIZQ . expresion error
   61             | IF PARIZQ . expresion PARDCH error
   62             | IF PARIZQ . expresion PARDCH THEN error
   63             | IF PARIZQ . expresion PARDCH THEN bloque ELSE error

    error          desplazar e ir al estado 92
    NOT            desplazar e ir al estado 69
    SOSTENIDO      desplazar e ir al estado 70
    INTERROGACION  desplazar e ir al estado 71
    MENOS          desplazar e ir al estado 72
    LITERAL        desplazar e ir al estado 73
    IDENTIFICADOR  desplazar e ir al estado 74
    CORIZQ         desplazar e ir al estado 75
    PARIZQ         desplazar e ir al estado 76

    expresion       ir al estado 93
    llamar_funcion  ir al estado 78
    agregado        ir al estado 79
    OPUNI           ir al estado 80


Estado 61

   83 sentencia_for_pascal: FOR error .

    $default  reduce usando la regla 83 (sentencia_for_pascal)


Estado 62

   53 sentencia_asignacion: IDENTIFICADOR . IGUAL expresion PYC
   54                     | IDENTIFICADOR . IGUAL error
   55                     | IDENTIFICADOR . IGUAL expresion error
   82 sentencia_for_pascal: FOR IDENTIFICADOR . IGUAL expresion TO expresion DO bloque

    IGUAL  desplazar e ir al estado 94


Estado 63

   84 sentencia_for_pascal: FOR sentencia_asignacion . error
   85                     | FOR sentencia_asignacion . TO error
   86                     | FOR sentencia_asignacion . TO expresion error
   87                     | FOR sentencia_asignacion . TO expresion DO error

    error  desplazar e ir al estado 95
    TO     desplazar e ir al estado 96


Estado 64

   75 sentencia_salida: WRITE error .

    $default  reduce usando la regla 75 (sentencia_salida)


Estado 65

   74 sentencia_salida: WRITE PARIZQ . lista_salida PARDCH PYC
   76                 | WRITE PARIZQ . error
   77                 | WRITE PARIZQ . lista_salida error
   78                 | WRITE PARIZQ . lista_salida PARDCH error

    error          desplazar e ir al estado 97
    NOT            desplazar e ir al estado 69
    SOSTENIDO      desplazar e ir al estado 70
    INTERROGACION  desplazar e ir al estado 71
    MENOS          desplazar e ir al estado 72
    LITERAL        desplazar e ir al estado 73
    IDENTIFICADOR  desplazar e ir al estado 74
    CORIZQ         desplazar e ir al estado 75
    PARIZQ         desplazar e ir al estado 76

    lista_salida    ir al estado 98
    expresion       ir al estado 99
    llamar_funcion  ir al estado 78
    agregado        ir al estado 79
    OPUNI           ir al estado 80


Estado 66

   70 sentencia_entrada: READ error .

    $default  reduce usando la regla 70 (sentencia_entrada)


Estado 67

   69 sentencia_entrada: READ PARIZQ . lista_entrada PARDCH PYC
   71                  | READ PARIZQ . error
   72                  | READ PARIZQ . lista_entrada error
   73                  | READ PARIZQ . lista_entrada PARDCH error

    error          desplazar e ir al estado 100
    IDENTIFICADOR  desplazar e ir al estado 101

    lista_entrada  ir al estado 102


Estado 68

   80 sentencia_return: RETURN error .

    $default  reduce usando la regla 80 (sentencia_return)


Estado 69

  119 OPUNI: NOT .

    $default  reduce usando la regla 119 (OPUNI)


Estado 70

  120 OPUNI: SOSTENIDO .

    $default  reduce usando la regla 120 (OPUNI)


Estado 71

  121 OPUNI: INTERROGACION .

    $default  reduce usando la regla 121 (OPUNI)


Estado 72

  122 OPUNI: MENOS .

    $default  reduce usando la regla 122 (OPUNI)


Estado 73

  101 expresion: LITERAL .

    $default  reduce usando la regla 101 (expresion)


Estado 74

   98 expresion: IDENTIFICADOR .
  108 llamar_funcion: IDENTIFICADOR . $@11 argumentos

    PARIZQ    reduce usando la regla 107 ($@11)
    $default  reduce usando la regla 98 (expresion)

    $@11  ir al estado 103


Estado 75

  114 agregado: CORIZQ . lista_expresiones CORDCH
  115         | CORIZQ . error
  116         | CORIZQ . lista_expresiones error

    error          desplazar e ir al estado 104
    NOT            desplazar e ir al estado 69
    SOSTENIDO      desplazar e ir al estado 70
    INTERROGACION  desplazar e ir al estado 71
    MENOS          desplazar e ir al estado 72
    LITERAL        desplazar e ir al estado 73
    IDENTIFICADOR  desplazar e ir al estado 74
    CORIZQ         desplazar e ir al estado 75
    PARIZQ         desplazar e ir al estado 76

    expresion          ir al estado 105
    llamar_funcion     ir al estado 78
    agregado           ir al estado 79
    lista_expresiones  ir al estado 106
    OPUNI              ir al estado 80


Estado 76

   94 expresion: PARIZQ . expresion PARDCH
  102          | PARIZQ . error

    error          desplazar e ir al estado 107
    NOT            desplazar e ir al estado 69
    SOSTENIDO      desplazar e ir al estado 70
    INTERROGACION  desplazar e ir al estado 71
    MENOS          desplazar e ir al estado 72
    LITERAL        desplazar e ir al estado 73
    IDENTIFICADOR  desplazar e ir al estado 74
    CORIZQ         desplazar e ir al estado 75
    PARIZQ         desplazar e ir al estado 76

    expresion       ir al estado 108
    llamar_funcion  ir al estado 78
    agregado        ir al estado 79
    OPUNI           ir al estado 80


Estado 77

   79 sentencia_return: RETURN expresion . PYC
   81                 | RETURN expresion . error
   96 expresion: expresion . OPBIN expresion
   97          | expresion . TER1 expresion ARROBA expresion
  104          | expresion . OPBIN error
  105          | expresion . TER1 error
  106          | expresion . TER1 expresion error

    error           desplazar e ir al estado 109
    LOGICOS         desplazar e ir al estado 110
    IGUALDAD        desplazar e ir al estado 111
    COMPARACION     desplazar e ir al estado 112
    MAS             desplazar e ir al estado 113
    MENOSMENOS      desplazar e ir al estado 114
    MULTIPLICATIVO  desplazar e ir al estado 115
    TER1            desplazar e ir al estado 116
    ARROBA          desplazar e ir al estado 117
    PORCENTAJE      desplazar e ir al estado 118
    DOBLEPOR        desplazar e ir al estado 119
    MENOS           desplazar e ir al estado 120
    PYC             desplazar e ir al estado 121

    OPBIN  ir al estado 122


Estado 78

   99 expresion: llamar_funcion .

    $default  reduce usando la regla 99 (expresion)


Estado 79

  100 expresion: agregado .

    $default  reduce usando la regla 100 (expresion)


Estado 80

   95 expresion: OPUNI . expresion
  103          | OPUNI . error
